Fixed issue with ClickDrag on mobile

--- a/src/ClickDrag.module.css
+++ b/src/ClickDrag.module.css
@@ -6,4 +6,5 @@
   user-select: none;
   width: fit-content;
   height: fit-content;
+  touch-action: none;
 }
